<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_another_location"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_latitude"
        android:inputType="textCapWords"
        android:key="latitude"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_latitude"
        android:dependency="@string/key_another_location"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_longitude"
        android:inputType="textCapWords"
        android:key="longitude"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_longitude"
        android:dependency="@string/key_another_location"/>

    <!--&lt;!&ndash; NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to-->
         <!--dismiss it. &ndash;&gt;-->
    <!--&lt;!&ndash; NOTE: ListPreference's summary should be set to its value by the activity code. &ndash;&gt;-->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
